@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.2 2018/12/21 06:14:14 wen Exp $
+$NetBSD: distinfo,v 1.3 2019/07/31 14:56:44 brook Exp $
 
-SHA1 (R/IRkernel_0.8.14.tar.gz) = be768343b6dd2a9cc67d09aa3d0a5c200e771a7e
-RMD160 (R/IRkernel_0.8.14.tar.gz) = c1571c9dce54bfd067f0943d7b7bec0e652f34a1
-SHA512 (R/IRkernel_0.8.14.tar.gz) = ecdba7e893e748d4d828614f08a1361e1fab29cfcaf78e9d42c838687db8b4736bd5caf24efa55cefdd1ab10335533a1a89250276ceec35210ca34b71c5b83ea
-Size (R/IRkernel_0.8.14.tar.gz) = 76628 bytes
+SHA1 (R/IRkernel_1.0.2.tar.gz) = dd7cfd6433fe5aaaf3919a41d7e20af617ded323
+RMD160 (R/IRkernel_1.0.2.tar.gz) = 97f6d9a530139cc6056b5a7abd13042cccd639fd
+SHA512 (R/IRkernel_1.0.2.tar.gz) = 3fb9c55645ffd0e72ee6e8bde48c7908b96660aca25d3925b61e0b1017b6a4bc8d44231259ef96c39e476171932c2e4f64a83c5f3882743b2ef7cadec62d24f1
+Size (R/IRkernel_1.0.2.tar.gz) = 52451 bytes
